# spice

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_cepheid_ccf.md  aemu.ipynb  binaries.ipynb  cepheid_ccf_analysis.py  cepheid_ccf_analysis_standalone.py  check_phoebe_eclipses.py  estimate_interpolation_errors.py  icosphere.ipynb  integration.ipynb  mesh_generation.ipynb  mesh_generation.py  mesh_rotation.ipynb  occlusion copy.ipynb  occlusion.ipynb  phoebe_binary.ipynb  phoebe_rotation.ipynb  phoebe_utils.py  pulsations.ipynb  pyproject.toml  read_spectra_grid copy.ipynb  read_spectra_grid.ipynb  requirements.txt  rotating_star_integration.ipynb  rotation.ipynb  rotation_and_spots.ipynb  run_eclipse_grid.sh  solar constant.ipynb  spectra.ipynb  spectrum.py  spectrum_fixed.py  spectrum_nn.py  spectrum_transformer.py  spots.ipynb  (+3 more)
.github/: release.yml
benchmarks/: README_gaussian_emulator.md  USAGE_EXAMPLES.md  _bench_common.py  benchmark_gaussian_emulator.py  benchmark_grid_loading.py  benchmark_memory.py  benchmark_occlusion.py  benchmark_spice_components.pbs  benchmark_spice_components.py  emulator_cost_breakdown.md  gaussian_emulator_benchmark_results.csv  grid_loading_cost_breakdown.md  grid_synthesis_time_sweep.py  lazy_zarr_decimation_sweep_results.ipynb  lazy_zarr_interpolation_decimation_sweep.py  memory_cost_breakdown.md  run_lazy_zarr_decimation_sweep.pbs  speed_test.py  test_run_benchmark_results.csv
ci/: run_container.py
compute_grid/: Use_nn_model.ipynb  Use_transformer_model.ipynb  check_spectra_and_NN_model.ipynb  compute_grid.py  primary_and_secondary_spectra.ipynb  spectrum_nn_model.ipynb
docs/: requirements.txt
geometry/: __init__.py  sutherland_hodgman.py  utils.py
models/: __init__.py  binary.py  mesh_generation.py  mesh_model.py  mesh_rotation copy.ipynb  mesh_transform.py  mesh_view.py  old_mesh_model.py  orbit_utils.py  spots.py  (+2 more)
(+8483 files in other folders)
