[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-spice"
version = "1.5.5"
readme = "README.md"
dependencies = [
    "autofig~=1.2.0",
    "chex~=0.1.88",
    "cmasher~=1.9.2",
    "jaxtyping~=0.2.36",
    "jax>=0.4.24",
    "jaxlib>=0.4.24",
    "numpy~=1.26.4",
    "overrides~=7.0.0",
    "flax>=0.8.1",
    "joblib~=1.3.2",
    "transformer-payne~=0.5",
    "phoebe~=2.4.17"
]

[project.optional-dependencies]
huggingface = ["huggingface-hub~=0.21.3"]
dev = ["pytest~=8.0.0", "pytest-datadir~=1.5.0", "coverage~=7.4.3"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spice = ["icosphere_cache/*.pickle", "spectrum/filter_data/*"]

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py",]
testpaths = ["tests",]
pythonpath = ["src"]
